--- a/djusers/authapp/templates/authapp/auth.tmpl
+++ b/djusers/authapp/templates/authapp/auth.tmpl
@@ -1,10 +1,15 @@
+{% extends 'base.tmpl' %}
+{% load crispy_forms_tags %}
+
+{% block content %}
 <!-- my_form.html -->
 <form method="POST" action="">
     {% csrf_token %}
 
-    {{ SignupForm }}
+    {{ SignupForm|crispy }}
 
-    <input type="submit" value="login" />
+    <button class="btn btn-primary" type="submit" value="login">Signup</button>
     <input type="hidden" name="title" value="abc">
     <!-- rest of form -->
 </form>
+{% endblock %}
